hphp/hack/test/typecheck/idx_too_many_args.php.exp
File "idx_too_many_args.php", line 9, characters 8-31:
Too many arguments (Typing[4105])
File "builtins.hhi", line 57, characters 10-12:
Definition is here
